# STARlight

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  Readme  Readme.PhotoNuclear  Readme.docx  slight.in  starlightconfig.h.in
DATA/Inputs/: slightHPJPea_100.in  slightHPJPeb_100.in  slightHPUPJPea_100.in  slightHPUPJPeb_100.in  slightHPUPJPec_100.in  slightHPUPO3Pa_100.in  slightHPUPO3Pb_100.in  slightHPUPO3Pc_100.in  slightHPUPRea_100.in  slightHPUPReb_100.in  slightHPUPRec_100.in  slightHPZ05_001.in  slightHPmu__000.in
DATA/Outputs/: slightHPJPea_100.hepmc  slightHPJPea_100.out  slightHPJPeb_100.hepmc  slightHPJPeb_100.out  slightHPUPJPea_100.hepmc  slightHPUPJPea_100.out  slightHPUPJPeb_100.out  slightHPUPJPec_100.hepmc  slightHPUPJPec_100.out  slightHPUPO3Pa_100.hepmc  slightHPUPO3Pa_100.out  slightHPUPO3Pb_100.hepmc  slightHPUPO3Pb_100.out  slightHPUPO3Pc_100.hepmc  slightHPUPO3Pc_100.out  slightHPUPRea_100.hepmc  slightHPUPRea_100.out  slightHPUPReb_100.hepmc  slightHPUPReb_100.out  slightHPUPRec_100.hepmc  slightHPUPRec_100.out  slightHPZ05_001.hepmc  slightHPZ05_001.out  slightHPmu__000.hepmc  slightHPmu__000.out
DATA/Uncertainty_Data/: HEPMC3_Evalautions.ipynb  Test_UPJeAbsdev1.csv  Test_UPJeAbsdev2.csv  Test_UPJeAbsdev3.csv  Test_UPO3PAbsdev1.csv  Test_UPO3PAbsdev2.csv  Test_UPO3PAbsdev3.csv  Test_UPReAbsdev1.csv  Test_UPReAbsdev2.csv  Test_UPReAbsdev3.csv
cmake_modules/: CommonMacros.cmake  FindDPMJet.cmake  FindPythia6.cmake  FindPythia8.cmake  FindROOT.cmake
config/: my.input  slight.in  slight.in.Fig_1  slight.in.Fig_4  slight.in.Fig_5  slight.in.dpmjet  slight.in.ee_rhic  slight.in.example  slight.in.jpsi_lhc  slight.in.new  slight.in.pPb_lhc  slight.in.rho_rhic
dpmjet/: dpmjetint.f
include/: PythiaStarlight.h  beam.h  beambeamsystem.h  bessel.h  eventchannel.h  eventfilewriter.h  filewriter.h  gammaacrosssection.h  gammaaluminosity.h  gammaavm.h  gammagammaleptonpair.h  gammagammasingle.h  hepmc3writer.h  incoherentPhotonNucleusLuminosity.h  incoherentVMCrossSection.h  inputParameters.h  inputParser.h  inputparameters.h  lorentzvector.h  nBodyPhaseSpaceGen.h  narrowResonanceCrossSection.h  nucleus.h  photonNucleusCrossSection.h  pythiadecayer.h  randomgenerator.h  readinluminosity.h  reportingUtils.h  singleton.h  slmutex.h  spectrum.h  spectrumprotonnucleus.h  starlight.h  starlightStandalone.h  starlightconstants.h  starlightdpmjet.h  starlightlimits.h  starlightparticle.h  starlightparticlecodes.h  starlightpythia.h  starlightstandalone.h  (+5 more)
src/: beam.cpp  beambeamsystem.cpp  bessel.cpp  eventchannel.cpp  eventfilewriter.cpp  filewriter.cpp  gammaacrosssection.cpp  gammaaluminosity.cpp  gammaavm.cpp  gammagammaleptonpair.cpp  gammagammasingle.cpp  hepmc3writer.cpp  incoherentPhotonNucleusLuminosity.cpp  incoherentVMCrossSection.cpp  inputParameters.cpp  inputParser.cpp  inputParser.h  inputparameters.cpp  lorentzvector.cpp  main.cpp  nBodyPhaseSpaceGen.cpp  narrowResonanceCrossSection.cpp  nucleus.cpp  photonNucleusCrossSection.cpp  psifamily.cpp  psifamily.h  pythiadecayer.cpp  randomgenerator.cpp  readinluminosity.cpp  spectrum.cpp  spectrumprotonnucleus.cpp  starlight.cpp  starlightStandalone.cpp  starlightdpmjet.cpp  starlightparticle.cpp  starlightparticlecodes.cpp  starlightpythia.cpp  starlightstandalone.cpp  twophotonluminosity.cpp  upcXevent.cpp  (+3 more)
standard/: Makefile  slight.in
utils/: Ana.C  AnaTree.C  AnaTree0.C  Analyze.cxx  AnalyzeTree.cxx  AnalyzeTree.h  AnalyzeTree2.cxx  AnalyzeTree2.h  ConvertStarlightAsciiToTree.C  ConvertStarlightAsciiToTree2.C  ana.C  anaTree.C  analyse.cxx  analyse.h  analyze.cxx  analyze.h  convertStarlightAsciiToTree.C
